--- a/PhxLocalizedRoutes.Scope.Nested.html
+++ b/PhxLocalizedRoutes.Scope.Nested.html
@@ -10,7 +10,7 @@
     <title>PhxLocalizedRoutes.Scope.Nested — Phoenix Localized Routes v0.1.0</title>
     <link rel="stylesheet" href="dist/elixir-b6f1ed5df9b1d42a7309.css" />
 
-    <script src="dist/sidebar_items-6f43a36c6b.js"></script>
+    <script src="dist/sidebar_items-4413a48ea3.js"></script>
 
       <script src="docs_config.js"></script>
 
@@ -94,7 +94,7 @@ Phoenix Localized Routes
 </button>
 
 
-    <a href="https://github.com/BartOtten/phoenix_localized_routes/blob/v0.1.0/lib/localized_routes.ex#L1" title="View Source" class="view-source" rel="help">
+    <a href="https://github.com/BartOtten/phoenix_localized_routes/blob/v0.1.0/lib/localized_routes/structs.ex#L1" title="View Source" class="view-source" rel="help">
       <i class="ri-code-s-slash-line" aria-hidden="true"></i>
       <span class="sr-only">View Source</span>
     </a>
@@ -126,6 +126,22 @@ Phoenix Localized Routes
 
       <div class="summary-row">
         <div class="summary-signature">
+          <a href="#t:kv_map/0" translate="no">kv_map()</a>
+
+        </div>
+
+      </div>
+
+      <div class="summary-row">
+        <div class="summary-signature">
+          <a href="#t:kv_tuple/0" translate="no">kv_tuple()</a>
+
+        </div>
+
+      </div>
+
+      <div class="summary-row">
+        <div class="summary-signature">
           <a href="#t:t/0" translate="no">t()</a>
 
         </div>
@@ -146,6 +162,62 @@ Phoenix Localized Routes
 Types
     </h1>
     <div class="types-list">
+<section class="detail" id="t:kv_map/0">
+
+  <div class="detail-header">
+    <a href="#t:kv_map/0" class="detail-link" title="Link to this type">
+      <i class="ri-link-m" aria-hidden="true"></i>
+      <span class="sr-only">Link to this type</span>
+    </a>
+    <h1 class="signature" translate="no">kv_map()</h1>
+
+      <a href="https://github.com/BartOtten/phoenix_localized_routes/blob/v0.1.0/lib/localized_routes/structs.ex#L13" class="view-source" rel="help" title="View Source">
+       <i class="ri-code-s-slash-line" aria-hidden="true"></i>
+       <span class="sr-only">View Source</span>
+     </a>
+
+
+  </div>
+
+  <section class="docstring">
+
+      <div class="specs">
+
+          <pre translate="no"><span class="attribute">@type</span> kv_map() :: %{required(<a href="https://hexdocs.pm/elixir/typespecs.html#built-in-types">binary</a>() | nil) =&gt; <a href="#t:t/0">t</a>()}</pre>
+
+      </div>
+
+
+  </section>
+</section>
+<section class="detail" id="t:kv_tuple/0">
+
+  <div class="detail-header">
+    <a href="#t:kv_tuple/0" class="detail-link" title="Link to this type">
+      <i class="ri-link-m" aria-hidden="true"></i>
+      <span class="sr-only">Link to this type</span>
+    </a>
+    <h1 class="signature" translate="no">kv_tuple()</h1>
+
+      <a href="https://github.com/BartOtten/phoenix_localized_routes/blob/v0.1.0/lib/localized_routes/structs.ex#L12" class="view-source" rel="help" title="View Source">
+       <i class="ri-code-s-slash-line" aria-hidden="true"></i>
+       <span class="sr-only">View Source</span>
+     </a>
+
+
+  </div>
+
+  <section class="docstring">
+
+      <div class="specs">
+
+          <pre translate="no"><span class="attribute">@type</span> kv_tuple() :: {<a href="https://hexdocs.pm/elixir/typespecs.html#built-in-types">binary</a>() | nil, <a href="#t:t/0">t</a>()}</pre>
+
+      </div>
+
+
+  </section>
+</section>
 <section class="detail" id="t:t/0">
 
   <div class="detail-header">
@@ -155,7 +227,7 @@ Types
     </a>
     <h1 class="signature" translate="no">t()</h1>
 
-      <a href="https://github.com/BartOtten/phoenix_localized_routes/blob/v0.1.0/lib/localized_routes.ex#L5" class="view-source" rel="help" title="View Source">
+      <a href="https://github.com/BartOtten/phoenix_localized_routes/blob/v0.1.0/lib/localized_routes/structs.ex#L5" class="view-source" rel="help" title="View Source">
        <i class="ri-code-s-slash-line" aria-hidden="true"></i>
        <span class="sr-only">View Source</span>
      </a>
@@ -172,7 +244,7 @@ Types
   scope_alias: <a href="https://hexdocs.pm/elixir/typespecs.html#basic-types">atom</a>(),
   scope_path: [<a href="https://hexdocs.pm/elixir/typespecs.html#built-in-types">binary</a>()],
   scope_prefix: <a href="https://hexdocs.pm/elixir/typespecs.html#built-in-types">binary</a>(),
-  scopes: <a href="PhxLocalizedRoutes.html#t:scopes/0">PhxLocalizedRoutes.scopes</a>() | nil
+  scopes: %{required(<a href="https://hexdocs.pm/elixir/typespecs.html#built-in-types">binary</a>() | <a href="https://hexdocs.pm/elixir/typespecs.html#basic-types">atom</a>()) =&gt; <a href="#t:t/0">t</a>()} | nil
 }</pre>
 
       </div>
@@ -193,7 +265,7 @@ Types
               <a href="https://hex.pm/packages/phoenix_localized_routes/0.1.0" class="line footer-hex-package">Package</a>
               <a href="https://preview.hex.pm/preview/phoenix_localized_routes/0.1.0" class="line">Preview</a>
 
-                <a href="https://preview.hex.pm/preview/phoenix_localized_routes/0.1.0/show/lib/localized_routes.ex">(current file)</a>
+                <a href="https://preview.hex.pm/preview/phoenix_localized_routes/0.1.0/show/lib/localized_routes/structs.ex">(current file)</a>
 
             </span>
 
