--- a/readme.html
+++ b/readme.html
@@ -120,7 +120,7 @@ relevance.</li><li>[x]  Works with Phoenix View and Phoenix LiveView</li><li>[x]
   </a>
   Documentation
 </h2>
-<p>Documentation can be found at <a href="https://hexdocs.pm/phoenix_localized_routes/">HexDocs</a></p><h2 id="usage-summary" class="section-heading">
+<p>Documentation can be found at <a href="https://hexdocs.pm/phoenix_localized_routes/">HexDocs</a> (published) and <a href="https://bartotten.github.io/phoenix_localized_routes/">GitHub Pages</a> (development)</p><h2 id="usage-summary" class="section-heading">
   <a href="#usage-summary" class="hover-link"><i class="ri-link-m" aria-hidden="true"></i>
   <p class="sr-only">usage-summary</p>
   </a>
@@ -152,11 +152,11 @@ relevance.</li><li>[x]  Works with Phoenix View and Phoenix LiveView</li><li>[x]
   </a>
   Installation
 </h2>
-<p>You can install this library by adding it to your list of dependencies in <code class="inline">mix.exs</code>:</p><pre><code class="makeup elixir" translate="no"><span class="kd">def</span><span class="w"> </span><span class="nf">deps</span><span class="w"> </span><span class="k" data-group-id="1602195488-1">do</span><span class="w">
-  </span><span class="p" data-group-id="1602195488-2">[</span><span class="w">
-    </span><span class="p" data-group-id="1602195488-3">{</span><span class="ss">:phoenix_localized_routes</span><span class="p">,</span><span class="w"> </span><span class="s">&quot;~&gt; 0.1.0&quot;</span><span class="p" data-group-id="1602195488-3">}</span><span class="w">
-  </span><span class="p" data-group-id="1602195488-2">]</span><span class="w">
-</span><span class="k" data-group-id="1602195488-1">end</span></code></pre><p>To configure your routes have a look at the <a href="usage.html">Usage Guide</a>.</p><h2 id="technical-notes" class="section-heading">
+<p>You can install this library by adding it to your list of dependencies in <code class="inline">mix.exs</code>:</p><pre><code class="makeup elixir" translate="no"><span class="kd">def</span><span class="w"> </span><span class="nf">deps</span><span class="w"> </span><span class="k" data-group-id="7365190942-1">do</span><span class="w">
+  </span><span class="p" data-group-id="7365190942-2">[</span><span class="w">
+    </span><span class="p" data-group-id="7365190942-3">{</span><span class="ss">:phoenix_localized_routes</span><span class="p">,</span><span class="w"> </span><span class="s">&quot;~&gt; 0.1.0&quot;</span><span class="p" data-group-id="7365190942-3">}</span><span class="w">
+  </span><span class="p" data-group-id="7365190942-2">]</span><span class="w">
+</span><span class="k" data-group-id="7365190942-1">end</span></code></pre><p>To configure your routes have a look at the <a href="usage.html">Usage Guide</a>.</p><h2 id="technical-notes" class="section-heading">
   <a href="#technical-notes" class="hover-link"><i class="ri-link-m" aria-hidden="true"></i>
   <p class="sr-only">technical-notes</p>
   </a>
